--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
     @apply border-border;
   }
 
+  html {
+    scroll-behavior: smooth !important;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
